--- a/aptos-node/Cargo.toml
+++ b/aptos-node/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "aptos-node"
 description = "Aptos node"
-version = "1.7.0"
+version = "0.0.0-main"
 
 # Workspace inherited keys
 authors = { workspace = true }
