Use node API via API Gateway throughout codebase

--- a/crates/aptos-faucet/configs/testing_transfer_funder.yaml
+++ b/crates/aptos-faucet/configs/testing_transfer_funder.yaml
@@ -7,7 +7,7 @@ bypasser_configs: []
 checker_configs: []
 funder_config:
   type: "TransferFunder"
-  node_url: "https://fullnode.devnet.aptoslabs.com"
+  node_url: "https://api.devnet.aptoslabs.com"
   chain_id: 36
   key_file_path: "/tmp/transfer_funder_devnet.key"
   minimum_funds: 10000000
