--- a/ecosystem/indexer-grpc/indexer-grpc-data-service/Cargo.toml
+++ b/ecosystem/indexer-grpc/indexer-grpc-data-service/Cargo.toml
@@ -16,6 +16,7 @@ rust-version = { workspace = true }
 anyhow = { workspace = true }
 aptos-indexer-grpc-data-access = { workspace = true }
 aptos-indexer-grpc-server-framework = { workspace = true }
+aptos-indexer-grpc-stream-server = { workspace = true }
 aptos-indexer-grpc-utils = { workspace = true }
 # We introduce this only for sampling purpose.
 aptos-logger = { workspace = true }
@@ -28,7 +29,6 @@ base64 = { workspace = true }
 clap = { workspace = true }
 cloud-storage = { workspace = true }
 futures = { workspace = true }
-hyper = { workspace = true }
 once_cell = { workspace = true }
 prost = { workspace = true }
 redis = { workspace = true }
