--- a/oidb/pepper/example-client-rust/Cargo.toml
+++ b/oidb/pepper/example-client-rust/Cargo.toml
@@ -13,7 +13,9 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
+aptos-crypto = { workspace = true }
 aptos-oidb-pepper-common = { workspace = true }
+aptos-types = { workspace = true }
 hex = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
