--- a/oidb/pepper/service/Cargo.toml
+++ b/oidb/pepper/service/Cargo.toml
@@ -16,6 +16,7 @@ rust-version = { workspace = true }
 aes-gcm = { workspace = true }
 anyhow = { workspace = true }
 aptos-oidb-pepper-common = { workspace = true }
+aptos-types = { workspace = true }
 ark-bls12-381 = { workspace = true }
 ark-ec = { workspace = true }
 ark-serialize = { workspace = true }
