--- a/oidb/pepper/service/Cargo.toml
+++ b/oidb/pepper/service/Cargo.toml
@@ -19,6 +19,7 @@ aptos-oidb-pepper-common = { workspace = true }
 aptos-types = { workspace = true }
 ark-bls12-381 = { workspace = true }
 ark-ec = { workspace = true }
+ark-ff = { workspace = true }
 ark-serialize = { workspace = true }
 bcs = { workspace = true }
 byteorder = { workspace = true }
